Fix menu on mobile

--- a/src/sass/components/_panel-bar.scss
+++ b/src/sass/components/_panel-bar.scss
@@ -29,10 +29,12 @@
 
   .menu {
     text-align: center;
+
     ul {
       margin: 0;
       padding: 0;
       list-style: none;
+
       li {
         display: inline-block;
         margin: 0 0.5rem;
@@ -87,5 +89,23 @@
         }
       }
     }
+  }
+}
+
+@media (max-width: 767px) {
+  .panel-bar {
+    .heading {
+      margin-bottom: 20px;
+    }
+
+    .menu {
+      text-align: left;
+    }
+  }
+}
+@media (max-width: 470px) {
+  .dots,
+  .menu {
+    display: none;
   }
 }
